app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require font-awesome
 *= require select2
 *= require select2-bootstrap
 *= require_tree .
 *= require_self
 */
@import "bootstrap-sprockets";
@import "bootstrap";

// Fonts
$header-font:'Coda', sans-serif;
$body-font:'Source Serif Pro', serif;

// Colours
$black: #111;
$white: #FCFCFC;
$grey-lite:#9D9D9D;
$grey-mid:#555;
$grey-dark:#333;
$blue:#337AB7;

// Semantic colours
$link-colour:$blue;
$link-colour-alt: #369;

$link-footer:$white;
$link-footer-alt:$grey-lite;

//
// Styles start here
//

// Body
body{
  background: #555;
  color:$black;
}

body,footer{
  font-size:16px;
  font-family:$body-font;
}

#body{
  background:$white;
  padding:70px 0 50px;
}

// Header
header{
  font-family:$header-font;
}

.navbar .navbar-brand{
  color:$white;
}
.navbar-inverse{
  background-color:#369;
  border-color:#036;

  .navbar-nav > li > a:hover,
  .navbar-nav > li > a:focus{
    background-color:#036;
    color:$white;
  }
  .navbar-toggle{
    color:#FCFCFC;
    background:none;
    border:none;
    padding:6px;
  }
}
.dropdown-menu > li > a{
  font-family:$body-font;
  &:hover,&:focus{
    background-color:#369;
    color:#FCFCFC;
  }
}

// Footer
footer{
  color:$white;
  padding:50px 0;
  margin:0;
  a{
    &:link,&:visited{
      color:$link-footer;
    }
    &:hover,&:active{
      color:$link-footer-alt;
    }
  }
  p a{
    text-decoration:underline;
  }
}

// General text
h1,h2,h3,h4{
  font-family:$header-font;
}
h1{
  font-size: 2em;
}
h2{
  font-size: 1.6em;
}
h3{
  font-size: 1.2em;
}
h4{
  font-size: 1.0em;
}


// Forms
.field_with_errors{
  select,input,textarea{
    border:1px solid #A94442;
  }
}

.form-group .help-block{
  margin-bottom:0;
}

// Table
table.table thead tr th.narrow{
  width:45px;
}

.select2-selection__rendered{
  font-family:$body-font;
}

.select2-container--bootstrap .select2-results__option--highlighted[aria-selected]{
  background:$link-colour;
}

.select2-container--bootstrap.select2-container--focus .select2-selection,
.select2-container--bootstrap.select2-container--open .select2-selection,
.select2-container--bootstrap .select2-dropdown{
  border-color:$link-colour;
}

